# TheOpenSnake

./: AUTHORS  COPYING  Makefile.am  README  README.md  configure.ac
share/applications/: Makefile.am  TheOpenSnake.desktop
share/icons/: Makefile.am
src/: Makefile.am  main.c  main.h  snake
src/core/: GrapichSnake.c  GrapichSnake.h  bool.h  error.c  error.h  game.c  game.h  grid.c  snake.c  sys.h
src/gui/: Windows_gui.c  gui.c  gui.h  gui_lnx.c  gui_lnx.h  gui_win.c  images.c  images.h
src/libs/: GrapichSnake.h  OpenGl.h
